# Worblehat

./: .gitignore  LICENSE  README.md  alembic.ini  config-template.toml  config.py  flake.nix  pyproject.toml  requirements.txt  run.sh
data/: iso639_1.csv
data_fetcher/: batch_csv_processor.py  data_fetcher.py  prelim_csv_generator.py
data_fetcher/bokhyller/: arbeidsrom_smal_hylle_5.csv
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
worblehat/: __init__.py  database.py  flaskapp.py  main.py  seed_test_data.py  wsgi-dev.py  wsgi_prod.py
worblehat/blueprints/: main.py
worblehat/cli/: main.py  prompt_utils.py
worblehat/cli/subclis/: __init__.py  advanced_options.py  bookcase_item.py  search.py
worblehat/deadline_daemon/: main.py
worblehat/flaskapp/: flaskapp.py  wsgi_dev.py
worblehat/models/: Bookcase.py  BookcaseItem.py  BookcaseItemBorrowing.py  BookcaseItemBorrowingQueue.py  BookcaseLocation.py  BookcaseShelf.py  Category.py  DeadlineDaemonLastRunDatetime.py  Item.py  Language.py  Location.py  MediaType.py  __init__.py
worblehat/models/migrations/versions/: 2023-05-06T1746_d51c7172d2f2_initial_migration.py
worblehat/models/mixins/: UidMixin.py  UniqueNameMixin.py
worblehat/services/: __init__.py  argument_parser.py  bookcase_item.py  config.py  data_fetcher.py  email.py  item.py  seed_test_data.py
worblehat/templates/: base.html
worblehat/templates/main/: index.html
worblehat/tools/: scanner.py
