[tool.poetry]
name = "worblehat"
version = "0.1.0"
description = "Worblehat is a simple library management system written specifically for Programvareverkstedet"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
alembic = "^1.9.4"
click = "^8.1.3"
flask = "^2.2.2"
flask-admin = "^1.6.1"
flask-sqlalchemy = "^3.0.3"
isbnlib = "^3.10.14"
python = "^3.10"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.8"

[tool.poetry.group.dev.dependencies]
werkzeug = "^2.3.3"

[tool.poetry.scripts]
scanner = "worblehat.tools.scanner:main"
dev = "worblehat.wsgi_dev:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
